--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:visibility="invisible"
+        android:id="@+id/imgPlayAgain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/ic_replay_black_24dp"
+        app:layout_constraintEnd_toStartOf="@+id/btnPlayAgain"
+        app:layout_constraintTop_toTopOf="@+id/btnPlayAgain" />
+
+    <Button
+        android:visibility="invisible"
+        android:id="@+id/btnPlayAgain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="165dp"
+        android:layout_marginEnd="16dp"
+        android:background="#ffffff"
+        android:text="Play Again"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="0dp"
@@ -124,12 +146,18 @@
     </android.support.v7.widget.GridLayout>
 
     <TextView
-        android:textStyle="bold"
+        android:id="@+id/textView"
         style="@style/Base.TextAppearance.AppCompat.Headline"
-        android:textColor="#000000"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="99dp"
+        android:gravity="center"
         android:text="TIC TAC TOE"
+        android:textColor="#000000"
         android:textSize="60sp"
-        android:gravity="center"/>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
